--- a/2024_06.md
+++ b/2024_06.md
@@ -1,2 +1,4 @@
 6/26</br>
-学習内容をgithubでアウトプットする
+- 学習内容をgithubでアウトプットする
+- GitHubのプロフィールをカスタマイズする</br>
+  参考記事https://qiita.com/twrcd1227/items/cb6534112bbdeb74ae10
