--- a/2024_06.md
+++ b/2024_06.md
@@ -2,3 +2,5 @@
 - 学習内容をgithubでアウトプットする
 - GitHubのプロフィールをカスタマイズする</br>
   参考記事https://qiita.com/twrcd1227/items/cb6534112bbdeb74ae10
+- RuboCopの導入、使用方法</br>
+  ほぼ全てのファイルに"# frozen_string_literal: true"を記述しなければならなかった。
