--- a/2024_06.md
+++ b/2024_06.md
@@ -4,3 +4,11 @@
   参考記事https://qiita.com/twrcd1227/items/cb6534112bbdeb74ae10
 - RuboCopの導入、使用方法</br>
   ほぼ全てのファイルに"# frozen_string_literal: true"を記述しなければならなかった。
+
+6/27</br>
+- progate path「ローカル環境構築」コース完了</br>
+   1. Progate CLIのインストール
+   2. Node.jsのインストール
+   3. Puppeteer のセットアップ
+   4. MySQL のセットアップ
+   5. Docker のセットアップ
