--- a/2024_06.md
+++ b/2024_06.md
@@ -12,3 +12,10 @@
    3. Puppeteer のセットアップ
    4. MySQL のセットアップ
    5. Docker のセットアップ
+
+- ターミナル上でマージする方法</br>
+（今までGitHub上でマージしていた）
+   1. コマンド"git merge hogehoge"
+   2. コミットメッセージを指定できるファイルが表示される
+   3. 必要に応じてコミットメッセージを指定する
+   4. ファイルを閉じてマージを完了させる
