--- a/2024_06.md
+++ b/2024_06.md
@@ -13,9 +13,24 @@
    4. MySQL のセットアップ
    5. Docker のセットアップ
 
+
 - ターミナル上でマージする方法</br>
 （今までGitHub上でマージしていた）
-   1. コマンド"git merge hogehoge"
-   2. コミットメッセージを指定できるファイルが表示される
-   3. 必要に応じてコミットメッセージを指定する
-   4. ファイルを閉じてマージを完了させる
+  1. コマンド
+      ```
+      git merge hogehoge
+      ```
+  2. コミットメッセージを指定できるファイルが表示される
+  3. 必要に応じてコミットメッセージを指定する
+  4. ファイルを閉じてマージを完了させる
+
+
+- git pushの引数は省略できる
+  1. プッシュする時に`-u`オプションを使って関係性を設定する
+      ```
+      git push -u origin main
+      ```
+  2. 設定できているかは`-vv`オプションで確認できる
+     ```
+     git branch -vv
+     ```
