--- a/2024_06.md
+++ b/2024_06.md
@@ -40,3 +40,12 @@
   - コードの挿入
   - 箇条書き
   - 番号付きリスト
+
+- progate path 集中コース</br>
+  「Git / GitHub を使ってチームの開発フローに参加できるようになろう」完了
+  - コミットをしてみよう
+  - ブランチを使ってみよう
+  - プッシュをしてみよう
+  - プルリクエストを使ってみよう
+  - コンフリクトを解消しよう
+  - Git を使って作業をやり直そう
