--- a/2024_06.md
+++ b/2024_06.md
@@ -14,18 +14,26 @@
    5. Docker のセットアップ
 
 
-- ターミナル上でマージする方法</br>
+<details>
+<summary>
+ターミナル上でマージする方法</br>
 （今までGitHub上でマージしていた）
+</summary>
+  
   1. コマンド
-      ```
-      git merge hogehoge
-      ```
+  ```
+  git merge hogehoge
+  ```
   2. コミットメッセージを指定できるファイルが表示される
   3. 必要に応じてコミットメッセージを指定する
   4. ファイルを閉じてマージを完了させる
+</details>
 
+<details>
+<summary>
+git pushの引数は省略できる
+</summary>
 
-- git pushの引数は省略できる
   1. プッシュする時に`-u`オプションを使って関係性を設定する
       ```
       git push -u origin main
@@ -34,6 +42,7 @@
      ```
      git branch -vv
      ```
+</details>
 
 6/28</br>
 - Markdownの記法ちょっとだけ
@@ -41,11 +50,16 @@
   - 箇条書き
   - 番号付きリスト
 
-- progate path 集中コース</br>
+<details>
+<summary>
+progate path 集中コース</br>
   「Git / GitHub を使ってチームの開発フローに参加できるようになろう」完了
+</summary>
+  
   - コミットをしてみよう
   - ブランチを使ってみよう
   - プッシュをしてみよう
   - プルリクエストを使ってみよう
   - コンフリクトを解消しよう
   - Git を使って作業をやり直そう
+</details>
