--- a/2024_06.md
+++ b/2024_06.md
@@ -6,12 +6,17 @@
   ほぼ全てのファイルに"# frozen_string_literal: true"を記述しなければならなかった。
 
 6/27</br>
-- progate path「ローカル環境構築」コース完了</br>
+<details>
+<summary>
+progate path「ローカル環境構築」コース完了
+</summary>
+  
    1. Progate CLIのインストール
    2. Node.jsのインストール
    3. Puppeteer のセットアップ
    4. MySQL のセットアップ
    5. Docker のセットアップ
+</details>
 
 
 <details>
