--- a/2024_06.md
+++ b/2024_06.md
@@ -68,3 +68,7 @@ progate path 集中コース</br>
   - コンフリクトを解消しよう
   - Git を使って作業をやり直そう
 </details>
+
+- Elasic IPを間違って解放してしまったため、復元した</br>
+  参考記事：https://dev.classmethod.jp/articles/reallocate-eip/
+
