--- a/2024_06.md
+++ b/2024_06.md
@@ -69,6 +69,9 @@ progate path 集中コース</br>
   - Git を使って作業をやり直そう
 </details>
 
+6/29</br>
+- 開発環境構築の復習
+
 - Elasic IPを間違って解放してしまったため、復元した</br>
   参考記事：https://dev.classmethod.jp/articles/reallocate-eip/
 
