--- a/2024_07.md
+++ b/2024_07.md
@@ -1,4 +1,5 @@
 7/1</br>
 - progate path 集中コース</br>
-  コマンドライン（csvファイルから指定されたデータを抽出②、③）
-- 「PATHを通す」概念
+  - コマンドライン（csvファイルから指定されたデータを抽出②、③）
+  - 「PATHを通す」概念
+  - シェルスクリプトを書いてみる
