--- a/2024_07.md
+++ b/2024_07.md
@@ -3,3 +3,7 @@
   - コマンドライン（csvファイルから指定されたデータを抽出②、③）
   - 「PATHを通す」概念
   - シェルスクリプトを書いてみる
+- progate学習レッスン【JavaScript】
+  - 真偽値と比較演算子
+  - else, else if
+  - 複数の条件式
