--- a/2024_07.md
+++ b/2024_07.md
@@ -4,13 +4,12 @@
   - 「PATHを通す」概念
   - シェルスクリプトを書いてみる
 - progate学習レッスン【JavaScript】
-  - 真偽値と比較演算子
-  - else, else if
-  - 複数の条件式
+  - 条件分岐（真偽値と比較演算子、else・else if、複数の条件式）
 </br></br>
 
 7/2</br>
 - progate学習レッスン【JavaScript】
-  - switch文、while文、for文
-  - オブジェクト配列、オブジェクトの値の取得・更新
-  - アロー関数、戻り値、スコープ
+  - 繰り返し処理（switch文、while文、for文）
+  - オブジェクト（配列、オブジェクトの値の取得・更新）
+  - 関数（アロー関数、戻り値、スコープ）
+  - クラスの基本（オブジェクト、クラス、コンストラクタ）
