--- a/2024_07.md
+++ b/2024_07.md
@@ -15,3 +15,6 @@
   - クラスの基本（オブジェクト、クラス、コンストラクタ）
 
 7/3</br>
+- progate学習レッスン【JavaScript】
+  - クラスの基本（メソッド、メソッド内でのメソッドの呼び出し）
+  - クラスの継承（継承とは、メソッドの追加、オーバーライド）
