--- a/2024_07.md
+++ b/2024_07.md
@@ -24,4 +24,6 @@
   - ファイルの分割（値のエクスポート、名前付きエクスポート）
   - パッケージ
 
-7/5</br>
+7/8</br>
+- progate学習レッスン【JavaScript】
+  - 配列を操作するメソッド（push, forEach, find, filter, map）
