--- a/2024_07.md
+++ b/2024_07.md
@@ -28,3 +28,7 @@
 - progate学習レッスン【JavaScript】
   - 配列を操作するメソッド（push, forEach, find, filter, map）
   - コールバック関数
+
+7/10</br>
+- paizaラーニング開始
+  - 「Dランクレベルアップメニュー」学習
