--- a/2024_07.md
+++ b/2024_07.md
@@ -41,3 +41,7 @@
 - progate学習レッスン【Python】
   - 真偽値と条件分岐
   - 買い物代金の計算
+
+7/30</br>
+- prigate学習レッスン【SQL】
+  - データの取得（WHERE, 比較演算子, LIKE演算子, NOT演算子, NULL, AND/OR演算子）
